syntax = "proto3";

option csharp_namespace = "UserService.Proto";

package UserService;

import "DatabaseExtension.Proto/Filters/Filter.proto";

message UserGetRequest {
    string UserName = 1;
}

message UsersGetRequest {
    DatabaseExtension.Filter Filter = 1;
}
